# CanonGate

./: .gitignore  CanonGate_Silent.vbs  DEBUG_THIS_MACHINE.md  README.md  RunAlterEgo.bat  canon_brain.py  canvas_server.py  daily_dashboard_aggregator.py  debug_main.js  dns_test.py  get_speakers.py  google_calendar_notifier.py  main.js  package-lock.json  package.json  requirements.txt  run_bg.bat  runpod_final_cannon.py  runpod_flux_fallback.py  runpod_flux_fixed.py  runpod_mapping_test.py  runpod_poll.py  runpod_resubmit.py  runpod_verify_final.py  simple_chat.py
archive/: README.md
brain/: __init__.py  config.py  context_manager.py  emitter.py  executor.py  filter.py  observer.py  thinker.py
canvas/: app.js  index.html  mobile.html  portal.html  style.css
docs/: CLAUDE-REQUEST-task-panel-toggle-fullview.txt  task-panel-toggle-and-fullview-plan.md
logs/: current_mic_list.txt  full_mic_list.txt  google_calendar_notified.json
mascot-web/: README.md  index.html  start_web_mascot.bat
scripts/: DebugStart.bat  DownloadVrmModel.bat  check_voices.py  download_kokoro.py  download_model.py  download_vrm.py  setup_mascot.py
simple-mode-desktop/: README.md  index.css  index.html  main.js  package-lock.json  package.json  run-desktop.ps1
simple-mode-desktop/src-tauri/: Cargo.toml  tauri.conf.json
tests/: test_brain_full_pipeline.py  test_brain_integration.py  test_brain_relay.py  test_canon_brain_integration.py  test_hidock_input.py  test_hub_notification.py  test_onnx.py
tmp/: cleanup_gtd.py
utils/: StartBackground.vbs  analyze_convo.py  apply_speed_patch.py  (+4 more)
(+60 files in other folders)
