[package]
name = "livetalk-simple-mode-desktop"
version = "0.1.0"
description = "LiveTalk simple mode desktop (Tauri)"
authors = ["LiveTalkAiAgent"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
